<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="loginBtn" type="id" />
    <item name="text_gallery" type="id" />
    <item name="text_home" type="id" />
    <item name="text_slideshow" type="id" />

</resources>